tests/ValidProofs/forallI.fitch
|---
||[c]
||---
|||P(c)
|||---
|||P(c) (R) 2
||P(c) → P(c) (→I) 2-3
|∀x. P(x) → P(x) (∀I) 1-4