tests/InvalidRules/forallI%3.fitch
|---
||[c]
||---
||P(d) (R) 1
|∀x.P(x) (∀I) 1-2
